kubernetes/apps/prod/home-automation/home-assistant/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: homeassistant
    namespace: home-automation
    annotations:
        gethomepage.dev/enabled: "true"
        gethomepage.dev/href: https://${HOST_HOME_ASSISTANT}.${DOMAIN}
        gethomepage.dev/description: Open source home automation platform
        gethomepage.dev/group: Home Automation
        gethomepage.dev/icon: home-assistant.png
        # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
        gethomepage.dev/app: home-assistant
        gethomepage.dev/name: Home Assistant
spec:
    entryPoints:
        - websecure
    tls:
        secretName: homeassistant.${DOMAIN}
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:on0Y7Nz0wT5CbLJ+ttELnfHP863qVpd8OLit4bN67lzyujJ/ed9czQ==,iv:Y4WKDxDq7iONpciGK7CpnOotP87Ti4NNYKaiyAUpQ1E=,tag:0LGcKhPxzO3q8evbZSJ+2w==,type:str]
          middlewares:
            - name: security-header
              namespace: traefik
          services:
            - name: home-assistant
              kind: Service
              namespace: home-automation
              port: 8123
sops:
    age:
        - recipient: age1xv8cuqcr09e3845unmja9x5jct30q9rmgz7awjc6dwrnq5m79etsvkz2z6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSUWpaTkZYbGtiMlg5S295
[...]
            oyOsLmIj4Ck18OZSk7i8pi61o0j6BalKqdj29zIeLRhQ4uWZUHNnaA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-09-20T14:27:06Z"
    mac: ENC[AES256_GCM,data:oMWBKaBFIwrjRE7ro26FZijUc51Wp2MdBw/ifqoZbH6BtnMzi5+7e6pkyKYbiWHy/9WmVHS30SoLBrRStWwtwKQt2fUYlG/iGc2grNBQ3Hmvu3XAbKk08enMcSj2iFCRHtu868XnnbmlvLN8lB6qRvjnkAgxD4xZ5lnVw3baoRM=,iv:9BXt0KY3uvDJdTWv9INbDiq97rVfz5Dow9u/DOljU6o=,tag:CxEIPtYp7rhCgTbxrnBL1w==,type:str]
    encrypted_regex: ^(user.*|pass.*|.*[Bb]earer.*|.*[Kk]ey|.*[Kk]eys|salt|sentry.*|.*[Tt]oken|data|stringData|match|href)$
    version: 3.10.2
